--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-<p> Hello </p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PBImap - Custom Power BI Map Visual</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        body {
+            background-color: #f4f6f9;
+            color: #333;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            padding: 50px 0;
+        }
+
+        header h1 {
+            font-size: 3em;
+            color: #1a73e8;
+        }
+
+        header p {
+            font-size: 1.2em;
+            color: #666;
+            margin: 10px 0 20px;
+        }
+
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            margin-top: 50px;
+        }
+
+        .feature-box {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            text-align: center;
+            flex: 1 1 300px;
+            max-width: 300px;
+        }
+
+        .feature-box i {
+            font-size: 2em;
+            color: #1a73e8;
+            margin-bottom: 10px;
+        }
+
+        .feature-box h3 {
+            font-size: 1.2em;
+            margin: 10px 0;
+        }
+
+        .feature-box p {
+            color: #666;
+        }
+
+        .cta {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        .cta button {
+            background-color: #1a73e8;
+            color: #fff;
+            font-size: 1.2em;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .cta button:hover {
+            background-color: #155ab6;
+        }
+
+        footer {
+            text-align: center;
+            padding: 30px 0;
+            margin-top: 50px;
+            color: #666;
+            font-size: 0.9em;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <h1>PBImap: Your Custom Power BI Map Visual</h1>
+            <p>Bring your geographic data to life with PBImap – an intuitive, interactive, and dynamic map solution for Power BI.</p>
+        </header>
+
+        <section class="features">
+            <div class="feature-box">
+                <i class="fas fa-map-marked-alt"></i>
+                <h3>Interactive Mapping</h3>
+                <p>Drag and drop your data points to visualize locations effortlessly. Experience responsive interaction with your data.</p>
+            </div>
+            <div class="feature-box">
+                <i class="fas fa-chart-line"></i>
+                <h3>Data-Driven Insights</h3>
+                <p>Leverage geographical data to uncover trends, pinpoint hotspots, and gain valuable insights with ease.</p>
+            </div>
+            <div class="feature-box">
+                <i class="fas fa-cogs"></i>
+                <h3>Fully Customizable</h3>
+                <p>Adjust layers, colors, and visual styles to create a map that aligns with your data visualization needs and aesthetics.</p>
+            </div>
+            <div class="feature-box">
+                <i class="fas fa-mobile-alt"></i>
+                <h3>Responsive Design</h3>
+                <p>Optimized for all devices, PBImap ensures your map looks great and performs well on desktops, tablets, and phones.</p>
+            </div>
+        </section>
+
+        <div class="cta">
+            <button onclick="window.location.href='https://example.com/download'">Get Started with PBImap</button>
+        </div>
+
+        <footer>
+            &copy; 2024 PBImap. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+        </footer>
+    </div>
+</body>
+
+</html>
