--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </section>
 
         <div class="cta">
-            <button onclick="window.location.href='https://example.com/download'">Get Started with PBImap</button>
+            <button onclick="window.location.href='http://pbimap.com'">Get Started with PBImap</button>
         </div>
 
         <footer>
