--- a/index.html
+++ b/index.html
@@ -42,6 +42,27 @@
             margin: 10px 0 20px;
         }
 
+        .nav-menu {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+            font-size: 1.1em;
+        }
+
+        .nav-menu a {
+            color: #333;
+            text-decoration: none;
+            margin: 0 15px;
+            padding: 5px 10px;
+            border-bottom: 2px solid transparent;
+            transition: color 0.3s, border-bottom-color 0.3s;
+        }
+
+        .nav-menu a:hover {
+            color: #1a73e8;
+            border-bottom-color: #1a73e8;
+        }
+
         .features {
             display: flex;
             flex-wrap: wrap;
@@ -110,6 +131,14 @@
         <header>
             <h1>PBImap: Your Custom Power BI Map Visual</h1>
             <p>Bring your geographic data to life with PBImap – an intuitive, interactive, and dynamic map solution for Power BI.</p>
+            <div class="nav-menu">
+                <a href="index.html">Home</a>
+                <a href="blogs.html">Blogs</a>
+                <a href="downloads.html">Downloads</a>
+                <a href="support.html">Support</a>
+                <a href="usage.html">Usage & Instructions</a>
+                <a href="author.html">Author</a>
+            </div>
         </header>
 
         <section class="features">
@@ -133,10 +162,20 @@
                 <h3>Responsive Design</h3>
                 <p>Optimized for all devices, PBImap ensures your map looks great and performs well on desktops, tablets, and phones.</p>
             </div>
+            <div class="feature-box">
+                <i class="fas fa-code"></i>
+                <h3>Easy Integration</h3>
+                <p>Seamlessly integrates with Power BI to enhance your dashboard capabilities with real-time map visualization.</p>
+            </div>
+            <div class="feature-box">
+                <i class="fas fa-lock"></i>
+                <h3>Secure & Reliable</h3>
+                <p>Built with data security in mind, PBImap protects your sensitive information with advanced security features.</p>
+            </div>
         </section>
 
         <div class="cta">
-            <button onclick="window.location.href='http://pbimap.com'">Get Started with PBImap</button>
+            <button onclick="window.location.href='https://example.com/download'">Get Started with PBImap</button>
         </div>
 
         <footer>
