--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Add viewport for responsiveness -->
-  <title>COH - Sewer Overflow Awareness</title>
+  <title>COH - Drought & Sewer Overflow Awareness</title>
   <!-- Chart.js + date adapter + zoom plugin via CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
@@ -320,7 +320,7 @@
       <div id="causeCheckboxes"></div>
     </div>
     <div class="main-content">
-      <h1>COH - Sewer Overflow Awareness</h1>
+      <h1>COH - Drought & Sewer Overflow Awareness</h1>
       <p>Click chart to update map date; Zoom/pan chart or map, then click <em>Reset Zoom</em></p>
       <div>
         <button id="weeklyBtn">Weekly</button>
