--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
         });
 
         const map = new Map({
-          basemap: "dark-gray-vector",
+          basemap: "streets-night-vector",
           layers: [ssoLayer]
         });
 
