--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
         </div>
       </div>
 	    <div class="footer">
-    Made with <span>&#10084;</span> by WWO - H.Ng - 2025
+    Made with <span>&#10084;</span> by WWO - HNg - 2025<br>
+    Data is provided "as is" and not for official purposes.
   </div>
     </div>
   </div>
