--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
         </div>
       </div>
 	    <div class="footer">
-    Made with <span>&#10084;</span> by WWO - HNg - 2025<br>
-    Data is provided "as is" and not for official purposes.
+    Made with <span>&#10084;</span> by WWO - HNg - 2025 - Disclaimer: Data provided 'as is' for informational use only.
   </div>
     </div>
   </div>
