changed streets-night to arcgis-nova

--- a/index.html
+++ b/index.html
@@ -703,7 +703,8 @@
         });
 
         const map = new Map({
-          basemap: "streets-night-vector",
+          /*basemap: "streets-night-vector",*/
+	  basemap: "arcgis-nova", 
           layers: [ssoLayer]
         });
 
