switch back to street night due to license requirement

--- a/index.html
+++ b/index.html
@@ -703,8 +703,7 @@
         });
 
         const map = new Map({
-          /*basemap: "streets-night-vector",*/
-	  basemap: "arcgis-nova", 
+          basemap: "streets-night-vector",
           layers: [ssoLayer]
         });
 
